@@ -161,8 +161,7 @@ inline void CMyPropertySheet::OnCreate()
 	{
 		// Reposition windows
 		RECT rc = GetWindowRect();
-		RECT rcButton;
-		::GetWindowRect(GetDlgItem(IDOK), &rcButton);
+		RECT rcButton = GetDlgItem(IDOK)->GetWindowRect();
 		SetWindowPos(NULL, 0, 0, rc.right - rc.left, rcButton.top - rc.top, SWP_NOMOVE | SWP_NOZORDER | SWP_NOACTIVATE);
 
 		// Remove buttons
